--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.7.2",
     "expo": "^51.0.14",
     "expo-font": "~12.0.7",
     "expo-image-picker": "~15.0.5",
